--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,290 +1,213 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ll_root"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/ll_root"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="15"
-    android:background="@drawable/login_bg">
+    android:background="@drawable/login_bg"
+    android:padding="@dimen/_40sdp">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/imageView"
+        android:contentDescription="@string/app_name"
+        android:layout_width="@dimen/_75sdp"
+        android:layout_height="@dimen/_75sdp"
+        android:layout_marginTop="@dimen/_40sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/lpesa_logo" />
 
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4.5"
-        android:gravity="center"
-        android:orientation="horizontal"
-
-        >
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/ll_flag_section"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_marginTop="@dimen/_40sdp"
+        android:background="@drawable/bg_black_view"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_10sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="@dimen/_75sdp"
-            android:layout_height="@dimen/_75sdp"
-            android:src="@drawable/lpesa_logo"
+            android:id="@+id/img_country"
             android:contentDescription="@string/app_name"
-
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"/>
-
-    <RelativeLayout
-        android:id="@+id/rl_PHONE"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:gravity="center"
-        android:layout_marginStart="@dimen/_12sdp"
-        android:layout_marginEnd="@dimen/_12sdp"
-        android:background="@drawable/bg_black_view"
-       >
-
-        <LinearLayout
-            android:id="@+id/ll_flag_section"
-            android:layout_width="@dimen/_50sdp"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical">
-
-            <ImageView
-                android:id="@+id/img_country"
-                android:layout_width="@dimen/_35sdp"
-                android:layout_height="@dimen/_20sdp"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:contentDescription="@string/app_name"
-
-                />
-
-            <ImageView
-                android:layout_width="@dimen/_22sdp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_2sdp"
-                android:layout_marginEnd="@dimen/_3sdp"
-                android:contentDescription="@string/app_name"
-                />
-            <View
-                android:layout_width="@dimen/_5sdp"
-                android:layout_height="wrap_content"
-                />
-        </LinearLayout>
+            android:layout_width="@dimen/_18sdp"
+            android:layout_height="@dimen/_18sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageView33"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_business_loan_icon" />
 
         <View
             android:id="@+id/view_1"
             android:layout_width="@dimen/_1sdp"
-            android:layout_height="match_parent"
-            android:layout_toEndOf="@+id/ll_flag_section"
-            android:layout_marginTop="@dimen/_7sdp"
-            android:layout_marginBottom="@dimen/_7sdp"
-            android:layout_marginStart="@dimen/_5sdp"
-            android:background="@color/colorWhite"/>
-
+            android:layout_height="@dimen/_20sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:background="@color/semi_white"
+            app:layout_constraintEnd_toStartOf="@+id/etPhone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView33"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.app.l_pesa.common.CommonEditTextRegular
             android:id="@+id/etPhone"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_toEndOf="@+id/view_1"
-            android:layout_marginStart="@dimen/_7sdp"
-            android:hint="@string/phone_no"
-            android:paddingStart="@dimen/_3sdp"
-            android:paddingEnd="@dimen/_2sdp"
             android:background="@android:color/transparent"
-            android:textSize="@dimen/_15sdp"
-            android:layout_margin="@dimen/_5sdp"
-            android:textColor="@color/colorWhite"
+            android:fontFamily="@font/montserrat"
             android:inputType="numberSigned"
-            android:textColorHint="@color/colorWhite"
-            android:maxLength="13"
-            android:text=""
-            android:gravity="start|center"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_10sdp"
+            android:textColor="@color/colorSemiWhite"
+            android:hint="@string/phone_no"
             android:cursorVisible="true"
             android:textCursorDrawable="@null"
             android:focusable="true"
             android:maxLines="1"
+            android:textColorHint="@color/colorSemiWhite"
+            android:textSize="@dimen/_12sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view_1"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            />
-    </RelativeLayout>
+        <ImageView
+            android:id="@+id/imageView33"
+            android:contentDescription="@string/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_3sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            app:layout_constraintEnd_toStartOf="@+id/view_1"
+            app:layout_constraintBottom_toBottomOf="@+id/ll_flag_section"
+            app:layout_constraintStart_toEndOf="@+id/img_country"
+            app:layout_constraintTop_toTopOf="@+id/ll_flag_section"
+            app:srcCompat="@drawable/ic_dropdown_icon" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".50"
-        android:orientation="vertical"
 
-        />
+    </android.support.constraint.ConstraintLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:gravity="center"
-        android:layout_marginStart="@dimen/_12sdp"
-        android:layout_marginEnd="@dimen/_12sdp"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/ll_password"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/bg_black_view"
-        >
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_10sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_flag_section">
 
-        <LinearLayout
-            android:id="@+id/ll_password"
-            android:layout_width="@dimen/_50sdp"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical">
-
-            <ImageView
-                android:id="@+id/img_password"
-                android:layout_width="@dimen/_35sdp"
-                android:layout_height="@dimen/_20sdp"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:contentDescription="@string/app_name"
-                />
-            <ImageView
-                android:layout_width="@dimen/_22sdp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_2sdp"
-                android:layout_marginEnd="@dimen/_3sdp"
-                android:contentDescription="@string/app_name"
-                />
-            <View
-                android:layout_width="@dimen/_5sdp"
-                android:layout_height="wrap_content"
-                />
-
-
-        </LinearLayout>
+        <ImageView
+            android:id="@+id/img_password"
+            android:contentDescription="@string/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_lock_icon" />
 
         <View
             android:id="@+id/viewPassword"
             android:layout_width="@dimen/_1sdp"
-            android:layout_height="match_parent"
-            android:layout_toEndOf="@+id/ll_password"
-            android:layout_marginTop="@dimen/_7sdp"
-            android:layout_marginBottom="@dimen/_7sdp"
-            android:layout_marginStart="@dimen/_5sdp"
-            android:background="@color/colorWhite"/>
-
+            android:layout_height="@dimen/_20sdp"
+            android:layout_marginStart="@dimen/_26sdp"
+            android:background="@color/semi_white"
+            app:layout_constraintEnd_toStartOf="@+id/etPassword"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/img_password"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.app.l_pesa.common.CommonEditTextRegular
             android:id="@+id/etPassword"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_toEndOf="@+id/viewPassword"
-            android:layout_marginStart="@dimen/_7sdp"
-            android:hint="@string/password"
-            android:paddingStart="@dimen/_3sdp"
-            android:paddingEnd="@dimen/_2sdp"
             android:background="@android:color/transparent"
-            android:textSize="@dimen/_15sdp"
-            android:layout_margin="@dimen/_5sdp"
-            android:textColor="@color/colorWhite"
+            android:fontFamily="@font/montserrat"
             android:inputType="textPassword"
-            android:textColorHint="@color/colorWhite"
-            android:maxLength="20"
-            android:text=""
-            android:gravity="start|center"
-            android:cursorVisible="true"
-            android:textCursorDrawable="@null"
-            android:focusable="true"
-            android:imeOptions="actionDone"
-            android:maxLines="1"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_10sdp"
+            android:hint="@string/password"
+            android:textColor="@color/colorSemiWhite"
+            android:textColorHint="@color/colorSemiWhite"
+            android:textSize="@dimen/_12sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/viewPassword"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            />
-    </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".50"
-        android:orientation="vertical"
+    </android.support.constraint.ConstraintLayout>
 
-        />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:layout_marginLeft="@dimen/_12sdp"
-        android:layout_marginRight="@dimen/_12sdp"
-
-        >
-
-        <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/txtLogin"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/login"
-            android:gravity="center"
-            android:textSize="@dimen/_16sdp"
-            android:textColor="@color/colorWhite"
-            android:textAllCaps="true"
-            android:background="@drawable/bg_button_yellow"
-            android:textStyle="bold"
-            />
-    </RelativeLayout>
-
-    <LinearLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".50"
-        android:orientation="vertical"
-
-        />
-
-    <com.app.l_pesa.common.CommonTextRegular
-        android:id="@+id/txtRegister"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".60"
-        android:text="@string/register_now"
-        android:gravity="center"
-        android:textSize="@dimen/_14sdp"
-        android:textColor="@color/colorWhite"
-        android:textAllCaps="false"
-        android:focusable="true"
-        />
-
-    <LinearLayout
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".05"/>
+    <com.app.l_pesa.common.CustomButtonRegular
+        android:id="@+id/txtLogin"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:background="@drawable/yellow_button"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/login"
+        android:textColor="@color/semi_white"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_password" />
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/txtForgotPassword"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".60"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_8sdp"
         android:text="@string/forgot_password"
-        android:gravity="center"
-        android:textSize="@dimen/_14sdp"
-        android:textColor="@color/colorWhite"
-        android:textAllCaps="false"
-        android:focusable="true"
+        android:fontFamily="@font/montserrat"
+        android:textColor="@color/colorAquaDeep"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />
 
-        />
+    <com.app.l_pesa.common.CommonTextRegular
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/dont_have_account"
+        android:textColor="@color/semi_white"
+        android:fontFamily="@font/montserrat"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        app:layout_constraintEnd_toStartOf="@+id/txtRegister"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:gravity="center"
-        >
+    <com.app.l_pesa.common.CommonTextRegular
+        android:id="@+id/txtRegister"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_5sdp"
+        android:text="@string/create_one"
+        android:fontFamily="@font/montserrat"
+        android:textColor="@color/color_aqua"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminateTint="@color/colorWhite"
-            android:layout_gravity="center_horizontal"
-            android:padding="@dimen/_5sdp"
-            android:visibility="invisible"
-            />
-    </LinearLayout>
-</LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/colorWhite"
+        android:padding="@dimen/_5sdp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
+
+</android.support.constraint.ConstraintLayout>
