--- a/app/src/main/res/layout/fragment_business_id_layout.xml
+++ b/app/src/main/res/layout/fragment_business_id_layout.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/llRoot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/screenBackground"
-        android:orientation="vertical"
-        android:id="@+id/llRoot">
+        android:orientation="vertical">
 
 
         <android.support.v7.widget.CardView
@@ -28,6 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="@dimen/_3sdp">
+
                 <com.app.l_pesa.common.CommonTextRegular
                     android:id="@+id/textView9"
                     android:layout_width="wrap_content"
@@ -44,18 +43,19 @@
 
                 <ImageView
                     android:id="@+id/imgProfile"
-                    android:contentDescription="@string/app_name"
                     android:layout_width="@dimen/_75sdp"
                     android:layout_height="@dimen/_75sdp"
-                    android:scaleType="fitXY"
-                    android:adjustViewBounds="true"
                     android:layout_marginBottom="@dimen/_10sdp"
+                    android:adjustViewBounds="true"
                     android:background="?selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="fitXY"
                     app:layout_constraintBottom_toTopOf="@+id/view3"
                     app:layout_constraintEnd_toStartOf="@+id/ilIdNumber"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView9"
                     app:srcCompat="@drawable/ic_upload_photo" />
+
                 <View
                     android:id="@+id/view3"
                     android:layout_width="match_parent"
@@ -80,18 +80,19 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView9"
                     app:layout_constraintTop_toTopOf="parent">
+
                     <com.app.l_pesa.common.CommonEditTextRegular
                         android:id="@+id/etBusinessId"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:drawableEnd="@drawable/ic_dropdown"
                         android:fontFamily="@font/montserrat"
                         android:hint="@string/business_type"
-                        android:textSize="@dimen/_12sdp"
                         android:longClickable="false"
-                        app:autoSizeStepGranularity="0.2sp"
-                        app:autoSizeTextType="uniform"
                         android:textColorHint="@color/colorGreyDeep"
-                        android:drawableEnd="@drawable/ic_dropdown"/>
+                        android:textSize="@dimen/_12sdp"
+                        app:autoSizeStepGranularity="0.2sp"
+                        app:autoSizeTextType="uniform" />
                 </com.app.l_pesa.common.CommonInputLayout>
 
                 <com.app.l_pesa.common.CommonInputLayout
@@ -101,20 +102,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_3sdp"
                     android:layout_marginBottom="@dimen/_12sdp"
+                    android:visibility="invisible"
                     app:layout_constraintBottom_toTopOf="@+id/view3"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView9"
-                    app:layout_constraintTop_toBottomOf="@+id/commonInputLayout2"
-                    android:visibility="invisible">
+                    app:layout_constraintTop_toBottomOf="@+id/commonInputLayout2">
+
                     <com.app.l_pesa.common.CommonEditTextRegular
                         android:id="@+id/etIdNumber"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/montserrat"
                         android:hint="@string/edit_id_number"
-                        android:maxLines="1"
                         android:inputType="text|textNoSuggestions"
                         android:maxLength="15"
+                        android:maxLines="1"
                         android:textSize="@dimen/_12sdp"
 
                         />
@@ -124,13 +126,13 @@
                     android:id="@+id/textView10"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginStart="@dimen/_2sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
                     android:drawablePadding="@dimen/_2sdp"
                     android:fontFamily="@font/montserrat"
                     android:lineSpacingExtra="@dimen/_1sdp"
                     android:text="@string/enter_id_no"
-                    android:textColor="@color/light_text_color"
+                    android:textColor="@color/colorGreyDeep"
                     android:textSize="@dimen/_10sdp"
                     app:layout_constraintBottom_toTopOf="@id/textView11"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -138,32 +140,34 @@
                     app:layout_constraintStart_toEndOf="@+id/imageView11"
                     app:layout_constraintTop_toTopOf="@+id/view3"
                     app:layout_constraintVertical_chainStyle="spread_inside" />
+
                 <com.app.l_pesa.common.CommonTextRegular
                     android:id="@+id/textView11"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_2sdp"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:drawablePadding="@dimen/_2sdp"
                     android:fontFamily="@font/montserrat"
                     android:lineSpacingExtra="@dimen/_1sdp"
-                    android:layout_marginStart="@dimen/_2sdp"
                     android:text="@string/upload_scanned_id"
-                    android:textColor="@color/light_text_color"
+                    android:textColor="@color/colorGreyDeep"
                     android:textSize="@dimen/_10sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/imageView12"
                     app:layout_constraintTop_toBottomOf="@+id/textView10" />
-                <Button
+
+                <com.app.l_pesa.common.CustomButtonRegular
                     android:id="@+id/buttonSubmit"
+                    style="?android:attr/borderlessButtonStyle"
                     android:layout_width="@dimen/_120sdp"
-                    android:layout_height="@dimen/_30sdp"
+                    android:layout_height="@dimen/_27sdp"
                     android:layout_marginTop="@dimen/_10sdp"
-                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:background="@drawable/ripple_green_button"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/submit"
-                    style="?android:attr/borderlessButtonStyle"
                     android:textAllCaps="false"
                     android:textColor="@color/colorPrimary"
                     android:textStyle="bold"
@@ -171,19 +175,19 @@
                     app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView11" />
-                <Button
+
+                <com.app.l_pesa.common.CustomButtonRegular
                     android:id="@+id/buttonCancel"
+                    style="?android:attr/borderlessButtonStyle"
                     android:layout_width="@dimen/_120sdp"
-                    android:layout_height="@dimen/_30sdp"
+                    android:layout_height="@dimen/_27sdp"
                     android:layout_marginTop="@dimen/_10sdp"
-                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:background="@drawable/bg_grey_view"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/cancel"
                     android:textAllCaps="false"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:textColor="@color/colorGreyDeep"
-                    android:textStyle="bold"
+                    android:textColor="@color/colorGrey"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/buttonSubmit"
@@ -191,19 +195,20 @@
 
                 <ImageView
                     android:id="@+id/imageView11"
-                    android:contentDescription="@string/app_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintEnd_toStartOf="@+id/textView10"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/textView10"
                     app:srcCompat="@drawable/ic_green_tick" />
+
                 <ImageView
                     android:id="@+id/imageView12"
-                    android:contentDescription="@string/app_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintEnd_toStartOf="@+id/textView11"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
@@ -216,11 +221,10 @@
             android:id="@+id/rvBusinessId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="@dimen/_4sdp"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
-            />
+            app:cardCornerRadius="@dimen/_4sdp" />
 
     </LinearLayout>
 
