--- a/app/src/main/res/layout/layout_list_id_information.xml
+++ b/app/src/main/res/layout/layout_list_id_information.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:text="@string/uploaded_on"
-            android:textColor="@color/colorSemiBlack"
+            android:textColor="@color/colorGreyDeep"
             android:textSize="@dimen/_11sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
